@@ -1,5 +1,7 @@
 	July 15th, 2007 (0.7.3):
 		* Fixed scoped_lock bug in CallScheduler, which could have caused undefined behavior upon a call timeout.
+		* Fixed CallHandler destructor, which failed to cleanup exception expecter instance (the effect was a minor memory leak).
+		* Fixed scoped_try_lock loop to correctly iterate already locked CallHandlers in CallScheduler::getNextCallFromQueue.
 	March 13th, 2007 (0.7.2): 
 		* Fixed some minor problems in the CallScheduler::syncCall templates.
 		* Renamed the demo projects
